added first format function and open-close btn functionality

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
-    <button>October 27th, 2020</button>
+    <button class="openclose-btn">October 27th, 2020</button>
     <div class="date-picker-box">
         <div class="date-picker-header">
             <button class="arrow arrow-left">←</button>
