added function to store picked date on the button and display crrent month

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <button class="openclose-btn">October 27th, 2020</button>
+    <button class="openclose-btn"></button>
     <div class="date-picker-box">
         <div class="date-picker-header">
             <button class="arrow arrow-left">←</button>
