finished styling the calendar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <span class="month-year">october-2020</span>
             <button class="arrow arrow-right">→</button>
         </div>
-        <div class="calendar-grid">
+        <div class="weekdays-grid">
             <div class="day">Sun</div>
             <div class="day">Mon</div>
             <div class="day">Tue</div>
